--- a/recordrest-web-jackson/src/main/webapp/WEB-INF/web.xml
+++ b/recordrest-web-jackson/src/main/webapp/WEB-INF/web.xml
@@ -7,12 +7,12 @@
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>jersey.config.server.provider.packages</param-name>
-            <param-value>package it.fl.poc.jsondatejackson.rest,com.fasterxml.jackson.jaxrs.json</param-value>
+            <param-value>it.fl.poc.jsondatejackson.rest,com.fasterxml.jackson.jaxrs.json</param-value>
         </init-param>
         <init-param>
             <param-name>jersey.config.server.provider.classnames</param-name>
             <!--param-value>org.glassfish.jersey.jackson.JacksonFeature,com.fasterxml.jackson.annotation.JsonFormat</param-value-->
-            <param-value>fasterxml.jackson.annotation.JsonFormat</param-value>
+            <param-value>org.glassfish.jersey.jackson.JacksonFeature,fasterxml.jackson.annotation.JsonFormat</param-value>
         </init-param>
         <!-- These parameters seems to be ineffective . 
         --> 
@@ -22,6 +22,14 @@
         </init-param>
         <init-param>
             <param-name>jersey.config.disableJsonProcessing</param-name>
+            <param-value>true</param-value>
+        </init-param>
+        <init-param>
+            <param-name>jersey.config.disableMoxyJson</param-name>
+            <param-value>true</param-value>
+        </init-param>
+        <init-param>
+            <param-name>jersey.config.disableAutoDiscovery</param-name>
             <param-value>true</param-value>
         </init-param>
     </servlet>
