--- a/recordrest-web-jackson/src/main/webapp/WEB-INF/web.xml
+++ b/recordrest-web-jackson/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>jersey.config.server.provider.packages</param-name>
-            <param-value>it.fl.poc.jsondatejackson.rest,com.fasterxml.jackson.jaxrs.json</param-value>
+            <param-value>it.fl.poc.jsondatejackson.rest,com.fasterxml.jackson.jaxrs</param-value>
         </init-param>
         <init-param>
             <param-name>jersey.config.server.provider.classnames</param-name>
@@ -32,6 +32,7 @@
             <param-name>jersey.config.disableAutoDiscovery</param-name>
             <param-value>true</param-value>
         </init-param>
+        <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
         <servlet-name>JaxRsWithJecksonWebApplication</servlet-name>
