--- a/recordrest-web-jackson/src/main/webapp/WEB-INF/web.xml
+++ b/recordrest-web-jackson/src/main/webapp/WEB-INF/web.xml
@@ -7,15 +7,12 @@
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>jersey.config.server.provider.packages</param-name>
-            <param-value>it.fl.poc.jsondatejackson.rest,com.fasterxml.jackson.jaxrs</param-value>
+            <param-value>it.fl.poc.jsondatejackson.rest,com.fasterxml.jackson.annotation</param-value>
         </init-param>
         <init-param>
             <param-name>jersey.config.server.provider.classnames</param-name>
-            <!--param-value>org.glassfish.jersey.jackson.JacksonFeature,com.fasterxml.jackson.annotation.JsonFormat</param-value-->
             <param-value>org.glassfish.jersey.jackson.JacksonFeature,com.fasterxml.jackson.annotation.JsonFormat</param-value>
         </init-param>
-        <!-- These parameters seems to be ineffective . 
-        --> 
         <init-param>
             <param-name>jersey.config.server.disableMoxyJson</param-name>
             <param-value>true</param-value>
@@ -30,6 +27,10 @@
         </init-param>
         <init-param>
             <param-name>jersey.config.disableAutoDiscovery</param-name>
+            <param-value>true</param-value>
+        </init-param>
+        <init-param>
+            <param-name>config.jsonFeature</param-name>
             <param-value>true</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
