--- a/recordrest-web-jackson/src/main/webapp/WEB-INF/web.xml
+++ b/recordrest-web-jackson/src/main/webapp/WEB-INF/web.xml
@@ -7,18 +7,20 @@
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>jersey.config.server.provider.packages</param-name>
-            <!--param-value>it.fl.poc.jsondatejackson.rest</param-value-->
-            <param-value>it.fl.poc.jsondatejackson.rest,com.fasterxml.jackson.annotation</param-value>
+            <param-value>it.fl.poc.jsondatejackson.rest</param-value>
+            <!--param-value>org.glassfish.jersey.jackson,com.fasterxml.jackson,it.fl.poc.jsondatejackson.rest</param-value-->
         </init-param>
         <init-param>
             <param-name>jersey.config.server.provider.classnames</param-name>
-            <param-value>org.glassfish.jersey.jackson.JacksonFeature,com.fasterxml.jackson.annotation.JsonFormat</param-value>
+            <param-value>org.glassfish.jersey.jackson.JacksonFeature,com.fasterxml.jackson.jaxrs.json.JacksonJsonProvider</param-value>
+            <!--param-value>org.glassfish.jersey.jackson.JacksonFeature,com.fasterxml.jackson.jaxrs.json.JacksonJsonProvider,com.fasterxml.jackson.annotation.JsonFormat</param-value-->
+            <!--param-value>com.fasterxml.jackson.jaxrs.annotation.JacksonFeatures.class,com.fasterxml.jackson.jaxrs.json.JacksonJsonProvider</param-value-->
         </init-param>
-        <!--
         <init-param>
             <param-name>jersey.config.server.disableMoxyJson</param-name>
             <param-value>true</param-value>
         </init-param>
+        <!--
         <init-param>
             <param-name>jersey.config.disableJsonProcessing</param-name>
             <param-value>true</param-value>
@@ -31,8 +33,8 @@
             <param-name>config.jsonFeature</param-name>
             <param-value>true</param-value>
         </init-param>
-        <load-on-startup>1</load-on-startup>
         -->
+        <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
         <servlet-name>JaxRsWithJecksonWebApplication</servlet-name>
