most stable but not 100% working

--- a/recordrest-web-jackson/src/main/webapp/WEB-INF/web.xml
+++ b/recordrest-web-jackson/src/main/webapp/WEB-INF/web.xml
@@ -17,7 +17,7 @@
             <!--param-value>com.fasterxml.jackson.jaxrs.annotation.JacksonFeatures.class,com.fasterxml.jackson.jaxrs.json.JacksonJsonProvider</param-value-->
         </init-param>
         <init-param>
-            <param-name>jersey.config.server.disableMoxyJson</param-name>
+            <param-name>jersey.config.disableMoxyJson</param-name>
             <param-value>true</param-value>
         </init-param>
         <init-param>
