--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>it.fl.poc</groupId>
@@ -7,31 +9,12 @@
   <packaging>ear</packaging>
 
   <name>jsonbdateformatEAR</name>
-   <properties>
-       <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+  <properties>
+    <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
 
-  <build>
-    <plugins>
-      <!--
-      <plugin>
-        <artifactId>maven-ear-plugin</artifactId>
-        <configuration>
-        <modules>
-          <webModule>
-              <groupId>it.fl.poc</groupId>
-              <artifactId>recordrest-web</artifactId>
-              <contextRoot>/jsonbdateformat</contextRoot>
-          </webModule>
-        </modules>
-        </configuration>
-      </plugin>
-      -->
-    </plugins>
-  </build>
   <dependencies>
-
     <!--
   	<dependency>
       <groupId>it.fl.poc</groupId>
@@ -41,12 +24,12 @@
   	</dependency>
     -->
 
-  	<dependency>
+    <dependency>
       <groupId>it.fl.poc</groupId>
       <artifactId>recordrest-web-jackson</artifactId>
-  		<version>0.0.1-SNAPSHOT</version>
-  		<type>war</type>
-  	</dependency>
+      <version>0.0.1-SNAPSHOT</version>
+      <type>war</type>
+    </dependency>
 
   </dependencies>
 </project>
