--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,12 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
 
-  <name>jsonbdateformatAPP</name>
-  <url>http://www.example.com</url>
-
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
+    <jackson.version>2.15.2</jackson.version>
+    <jersey.version>2.29</jersey.version>
   </properties>
 
   <modules>
