--- a/recordrest-web-jackson/src/main/webapp/WEB-INF/web.xml
+++ b/recordrest-web-jackson/src/main/webapp/WEB-INF/web.xml
@@ -3,41 +3,19 @@
     xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
     version="3.1">
     <servlet>
-        <servlet-name>JaxRsWithJecksonWebApplication</servlet-name>
+        <servlet-name>JaxRsWithJacksonWebApplication</servlet-name>
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>jersey.config.server.provider.packages</param-name>
             <param-value>it.fl.poc.jsondatejackson.rest</param-value>
-            <!--param-value>org.glassfish.jersey.jackson,com.fasterxml.jackson,it.fl.poc.jsondatejackson.rest</param-value-->
         </init-param>
         <init-param>
-            <param-name>jersey.config.server.provider.classnames</param-name>
-            <param-value>org.glassfish.jersey.jackson.JacksonFeature,com.fasterxml.jackson.jaxrs.json.JacksonJsonProvider</param-value>
-            <!--param-value>org.glassfish.jersey.jackson.JacksonFeature,com.fasterxml.jackson.jaxrs.json.JacksonJsonProvider,com.fasterxml.jackson.annotation.JsonFormat</param-value-->
-            <!--param-value>com.fasterxml.jackson.jaxrs.annotation.JacksonFeatures.class,com.fasterxml.jackson.jaxrs.json.JacksonJsonProvider</param-value-->
+            <param-name>jersey.config.jsonFeature</param-name>
+            <param-value>User Provided JacksonJsonProvider</param-value>
         </init-param>
-        <init-param>
-            <param-name>jersey.config.disableMoxyJson</param-name>
-            <param-value>true</param-value>
-        </init-param>
-        <init-param>
-            <param-name>jersey.config.disableAutoDiscovery</param-name>
-            <param-value>true</param-value>
-        </init-param>
-        <init-param>
-            <param-name>jersey.config.disableJsonProcessing</param-name>
-            <param-value>true</param-value>
-        </init-param>
-        <!--
-        <init-param>
-            <param-name>config.jsonFeature</param-name>
-            <param-value>true</param-value>
-        </init-param>
-        -->
-        <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
-        <servlet-name>JaxRsWithJecksonWebApplication</servlet-name>
+        <servlet-name>JaxRsWithJacksonWebApplication</servlet-name>
         <url-pattern>/resources3/*</url-pattern>
     </servlet-mapping>
 </web-app>
