minimal viable configuration in web.xml

--- a/recordrest-web-jackson/src/main/webapp/WEB-INF/web.xml
+++ b/recordrest-web-jackson/src/main/webapp/WEB-INF/web.xml
@@ -10,8 +10,13 @@
             <param-value>it.fl.poc.jsondatejackson.rest</param-value>
         </init-param>
         <init-param>
+            <param-name>jersey.config.server.provider.classnames</param-name>
+            <param-value>org.glassfish.jersey.jackson.JacksonFeature,com.fasterxml.jackson.jaxrs.json.JacksonJsonProvider</param-value>
+        </init-param>
+        <init-param>
             <param-name>jersey.config.jsonFeature</param-name>
-            <param-value>User Provided JacksonJsonProvider</param-value>
+            <param-value>JacksonJsonProvider</param-value>
+            <!--param-value>User Provided JacksonJsonProvider</param-value-->
         </init-param>
     </servlet>
     <servlet-mapping>
@@ -19,11 +24,3 @@
         <url-pattern>/resources3/*</url-pattern>
     </servlet-mapping>
 </web-app>
-<!-- 
-  References:
-   * https://eclipse-ee4j.github.io/jersey.github.io/documentation/2.29/appendix-properties.html 
-   * [JAX-RS 2.0 behavior changes - IBM
-Documentation](https://www.ibm.com/docs/en/was-zos/9.0.5?topic=applications-jax-rs-20-behavior-changes)
-   * [Using Jackson as JSON provider in Jersey 2.x |
-cassiomolin](https://cassiomolin.com/2016/08/10/using-jackson-as-json-provider-in-jersey-2x/)
--->
